--- a/client/main.css
+++ b/client/main.css
@@ -1,17 +1,23 @@
+.form-group {
+ margin-bottom: 15px; 
+}
 body{
 	height: 100%;
+	background-color: #C79F97;
 }
 .jumbotron{
-	padding: 0px;
-	margin: 0px;
-	background-color: #DDDBDC;
+	background-image: url('/img/jb2.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding-top: 44%;
+	background-color: #C79F97;
 }
 img{
 	width: 96%;
 	margin-bottom: 0px;
 }
 .navbar-default{
-	background-color: #F28040;
+	background-color: #951432;
 	border-radius: 0px;
 	margin: 0px;
 	padding: 0px;
@@ -30,8 +36,8 @@ img{
 	padding-top: 5px;
 }
 .navbar-default .navbar-collapse, .navbar-default .navbar-form{
-	border-color: #F28040;
-	background-color: #F28040;
+	border-color: #951432;
+	background-color: #951432;
 }
 .navbar-default .navbar-nav > li > a{
 	color: white;
@@ -47,7 +53,7 @@ legend{
 	padding-top: 20px;
 }
 .box{
-	margin-left: 25px;
+	margin-left: 30px;
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12{
 	padding-left: 0px;
@@ -67,4 +73,10 @@ legend{
 	margin-top: 80px;
 	min-height: 515px;
 	padding-bottom: 70px;
+}
+.cls{
+	font-size: 20px;
+}
+.yay{
+	margin-left: 30px;
 }
